--- a/templates/fall-2012/django/javascript-and-ajax.html
+++ b/templates/fall-2012/django/javascript-and-ajax.html
@@ -1,11 +1,8 @@
-{% extends "fall-2012/sidebar.html" %}
+{% extends "fall-2012/menu.html" %}
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Django Tutorial | Javascript and Ajax with jQuery</h1>
+      <h1>Django Tutorial | Javascript and Ajax with jQuery</h1>
 
       <p>Next we will use Javascript and Ajax to provide additional
 	polish.</p>
@@ -274,8 +271,5 @@ function getToday(url) {
 
       </p>
 
-    </div>
-  </div>
-</div>
 
 {% endblock %}
