--- a/templates/fall-2012/django/mongodb.html
+++ b/templates/fall-2012/django/mongodb.html
@@ -1,11 +1,8 @@
-{% extends "fall-2012/sidebar.html" %}
+{% extends "fall-2012/menu.html" %}
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Django Tutorial | MongoDB</h1>
+      <h1>Django Tutorial | MongoDB</h1>
 
       <p>We will now convert the database backend from SQLite
 	to <a href="http://www.mongodb.org/">MongoDB</a>. MongoDB is a
@@ -196,9 +193,5 @@ i.user.id
 	document per list item. Likewise, today's list could be stored in the
 	UserList object, instead of in the session.</p>
 
-
-    </div>
-  </div>
-</div>
 
 {% endblock %}
