--- a/templates/fall-2012/django/session-state.html
+++ b/templates/fall-2012/django/session-state.html
@@ -1,11 +1,8 @@
-{% extends "fall-2012/sidebar.html" %}
+{% extends "fall-2012/menu.html" %}
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Django Tutorial | Session State</h1>
+      <h1>Django Tutorial | Session State</h1>
 
       <p>Now we will use session state to track pages for redirection
 	and to provide a way for users to select a set of things on
@@ -220,9 +217,5 @@ def later(request, id):
 	<a href="/fall-2012/django/javascript-and-ajax">Javascript and Ajax</a>
 
       </p>
-
-    </div>
-  </div>
-</div>
 
 {% endblock %}
