--- a/templates/fall-2012/django/templates-and-css.html
+++ b/templates/fall-2012/django/templates-and-css.html
@@ -1,11 +1,8 @@
-{% extends "fall-2012/sidebar.html" %}
+{% extends "fall-2012/menu.html" %}
 
 {% block page %}
-
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Django Tutorial | Templates and CSS</h1>
+      
+<h1>Django Tutorial | Templates and CSS</h1>
 
       <p>Now we will modify the templates so that they have a common
 	look and a more professional appearance.</p>
@@ -365,9 +362,5 @@ urlpatterns += patterns('',
 	<a href="/fall-2012/django/session-state">Session State</a>
 
       </p>
-
-    </div>
-  </div>
-</div>
 
 {% endblock %}
