--- a/templates/fall-2012/django/users.html
+++ b/templates/fall-2012/django/users.html
@@ -1,11 +1,8 @@
-{% extends "fall-2012/sidebar.html" %}
+{% extends "fall-2012/menu.html" %}
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Django Tutorial | Users</h1>
+      <h1>Django Tutorial | Users</h1>
 
       <p>Next we will create user accounts with the
 
@@ -421,9 +418,5 @@ def item(request, id):
 	<a href="/fall-2012/django/templates-and-css">Templates and CSS</a>
 
       </p>
-
-    </div>
-  </div>
-</div>
 
 {% endblock %}
