--- a/templates/fall-2012/labs/rest-interface.html
+++ b/templates/fall-2012/labs/rest-interface.html
@@ -1,11 +1,8 @@
-{% extends "fall-2012/sidebar.html" %}
+{% extends "fall-2012/menu.html" %}
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Lab: REST Interface for Web Application</h1>
+      <h1 class=>Lab: REST Interface for Web Application</h1>
 
       <p>In this assignment, you will write a REST interface for your web
 	database application.  The goals of this assignment are to (1) learn
@@ -37,8 +34,5 @@
       <p>This assignment is worth 50 points.  Your report will be graded
 	based on the completeness and correctness of your interface.</p>
       
-    </div>
-  </div>
-</div>
 
 {% endblock %}
