--- a/templates/fall-2013/code.html
+++ b/templates/fall-2013/code.html
@@ -1,11 +1,8 @@
-{% extends "fall-2013/sidebar.html" %}
+{% extends "fall-2013/menu.html" %}
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Sample Code</h1>
+<h1>Sample Code</h1>
 
       <h2>Socket Programming</h2>
 
@@ -53,9 +50,5 @@ export PYTHONPATH=.:/users/faculty/zappala/lib64/python2.7:/users/faculty/zappal
 
       <p>Once you log out and then log back in, the plotting script
 	should work.</p>
-
-    </div>
-  </div>
-</div>
 
 {% endblock %}
