--- a/templates/fall-2013/index.html
+++ b/templates/fall-2013/index.html
@@ -1,12 +1,8 @@
-{% extends "fall-2013/sidebar.html" %}
+{% extends "fall-2013/menu.html" %}
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-
-      <h1 class="top">Syllabus</h1>
+<h1>Syllabus</h1>
 
       <p>This course covers Internet application programming, including
 	client-server and web applications. At the end of this course,
@@ -229,10 +225,5 @@
 	appropriate will be coordinated with the student and instructor by
 	that office.</p>
 
-
-
-    </div>
-  </div>
-</div>
       
 {% endblock %}
