--- a/templates/fall-2013/labs/download-accelerator.html
+++ b/templates/fall-2013/labs/download-accelerator.html
@@ -1,11 +1,8 @@
-{% extends "fall-2013/sidebar.html" %}
+{% extends "fall-2013/menu.html" %}
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Lab: Download Accelerator</h1>
+      <h1>Lab: Download Accelerator</h1>
 
       <p>In this assignment, you will create an HTTP downloader that
 	can download a file in parallel using a number of concurrent
@@ -169,9 +166,5 @@ tar -czvf download-accelerator.tgz download-accelerator
 	helpful and clear your debugging information is, the better
 	your chances for getting useful help. You should apply this
 	same standard to how you document your code.</p>
-
-    </div>
-  </div>
-</div>
 
 {% endblock %}
