--- a/templates/fall-2013/labs/messaging-service.html
+++ b/templates/fall-2013/labs/messaging-service.html
@@ -1,11 +1,8 @@
-{% extends "fall-2013/sidebar.html" %}
+{% extends "fall-2013/menu.html" %}
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Lab: Messaging Service</h1>
+      <h1>Lab: Messaging Service</h1>
 
       <p>The goals of this lab are (1) to learn how to write a
 	client-server application using the BSD socket API, (2) to
@@ -263,9 +260,5 @@ tar -czvf lab1.tgz lab1
 	given on the command line. The more helpful and clear your debugging
 	information is, the better your chances for getting useful help. You
 	should apply this same standard to how you document your code.</p>
-
-    </div>
-  </div>
-</div>
 
 {% endblock %}
