--- a/templates/fall-2013/labs/queueing-theory.html
+++ b/templates/fall-2013/labs/queueing-theory.html
@@ -1,11 +1,8 @@
-{% extends "fall-2013/sidebar.html" %}
+{% extends "fall-2013/menu.html" %}
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Lab: Queueing Theory and Web Server Performance</h1>
+      <h1>Lab: Queueing Theory and Web Server Performance</h1>
 
       <p>In this assignment, you will use queuing theory and experiments to
 	examine the performance of your web server.  The goals of this
@@ -295,9 +292,5 @@ python generator.py --port 8000 -l 10 -d 30
       voice, e.g. "Figure 1 shows...". Label each figure and refer to
       the figure by number when discussing your results. Be sure all
       graphs have accurate labels.</p>
-
-    </div>
-  </div>
-</div>
 
 {% endblock %}
