--- a/templates/fall-2013/labs/threaded-messaging-service.html
+++ b/templates/fall-2013/labs/threaded-messaging-service.html
@@ -1,11 +1,8 @@
-{% extends "fall-2013/sidebar.html" %}
+{% extends "fall-2013/menu.html" %}
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Lab: Threaded Messaging Service</h1>
+<h1>Lab: Threaded Messaging Service</h1>
 
       <p>The goals of this assignment are (1) to learn how to use the
 	pthreads library to manage threads, (2) to understand how to create
@@ -88,9 +85,4 @@ tar -czvf lab2.tgz lab2
 	given on the command line. The more helpful and clear your debugging
 	information is, the better your chances for getting useful help. You
 	should apply this same standard to how you document your code.</p>
-
-    </div>
-  </div>
-</div>
-
 {% endblock %}
