--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@ CS 240
 
 # Course Materials
 
+* [2014 Fall]({{url_for("show",directory="fall-2014")}})
 * [2014 Winter]({{url_for("show",directory="winter-2014")}})
 * [2013 Fall]({{url_for("show",directory="fall-2013")}})
 * [2012 Fall]({{url_for("show",directory="fall-2012")}})
