--- a/templates/winter-2014/code.html
+++ b/templates/winter-2014/code.html
@@ -1,4 +1,4 @@
-{% extends "winter-2014/sidebar.html" %}
+{% extends "winter-2014/menu.html" %}
 
 {% block page %}
 
@@ -13,14 +13,14 @@ echo client and server:
 
 [Socket programming examples in C++](https://github.com/zappala/socket-programming-examples-c)
 
-# Thread Programming
+## Thread Programming
 
 C++ code that shows how to create threads using the pthreads library
 and how to synchronize threads using semaphores and mutexes.
 
 [pthreads examples in C/C++](https://github.com/zappala/pthreads-examples-c)
 
-# Python Networking and Threading
+## Python Networking and Threading
 
 Python code that shows how to use Python Requests, a client-side HTTP
 library, threading, and low-level socket programming.
