--- a/templates/winter-2014/schedule.html
+++ b/templates/winter-2014/schedule.html
@@ -1,4 +1,4 @@
-{% extends "winter-2014/sidebar.html" %}
+{% extends "winter-2014/menu.html" %}
 
 {% block page %}
 
@@ -6,6 +6,8 @@
 
 <p>This schedule is <u>subject to change</u>. Assignments may be
 changed up until the day they are assigned.</p>
+
+<h2>MWF 3:00pm 3104 JKB</h2>
 
 {% for week in weeks %}
 <h2 class="plain">Week {{ week.number }}</h2>
