--- a/templates/fall-2012/labs/web-server-grading.html
+++ b/templates/fall-2012/labs/web-server-grading.html
@@ -1,4 +1,4 @@
-{% extends "fall-2012/sidebar.html" %}
+{% extends "fall-2012/menu.html" %}
 
 {% macro item(text,score,criteria) -%}
 <div class="box"></div>
@@ -10,10 +10,7 @@
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Web Server Grading Sheet</h1>
+<h1>Web Server Grading Sheet</h1>
 
       <p><i>The TA will fill out this sheet when grading your program.</i></p>
 
@@ -105,10 +102,6 @@
 
       <div class="border">TA Name:</div>
       <div class="border">Score:</div>
-
-    </div>
-  </div>
-</div>
 
 {% endblock %}
 
