--- a/templates/fall-2012/schedule.html
+++ b/templates/fall-2012/schedule.html
@@ -1,45 +1,38 @@
-{% extends "fall-2012/sidebar.html" %}
+{% extends "fall-2012/menu.html" %}
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Schedule</h1>
+<h1>Schedule</h1>
 
-      This schedule is <u>subject to change</u>. Assignments may be
-      changed up until the day they are assigned.
+This schedule is <u>subject to change</u>. Assignments may be
+changed up until the day they are assigned.
 
 
-      {% for week in weeks %}
-      <h2 class="plain">Week {{ week.number }}</h2>
+{% for week in weeks %}
+<h2 class="plain">Week {{ week.number }}</h2>
 
-      {% for day in week.days %}
-      <div class="row-fluid schedule">
+{% for day in week.days %}
+<div class="row-fluid schedule">
 
-	<div class="span2 day">{{ day.date }}</div>
+  <div class="span2 day">{{ day.date }}</div>
 
-	<div class="span10">
-	  <div class="content">
-	    <span class="section">{{ day.section }}</span> | <span class="topic">{{ day.topic }}</span>
-	    <ul>
-	      {% for reading in day.readings %}
-	      <li>{{ reading|safe }}</li>
-	      {% endfor %}
-	    </ul>
-	  </div>
-	  {% for assignment in day.assignments %}
-	  <div class="assignment">{{ assignment|safe }}</div>
-	  {% endfor %}
-	</div>
-      </div>
-	
-      {% endfor %}
-
-      {% endfor %}
-
+  <div class="span10">
+    <div class="content">
+      <span class="section">{{ day.section }}</span> | <span class="topic">{{ day.topic }}</span>
+      <ul>
+	{% for reading in day.readings %}
+	<li>{{ reading|safe }}</li>
+	{% endfor %}
+      </ul>
     </div>
+    {% for assignment in day.assignments %}
+    <div class="assignment">{{ assignment|safe }}</div>
+    {% endfor %}
   </div>
 </div>
-      
+
+{% endfor %}
+
+{% endfor %}
+
 {% endblock %}
