--- a/templates/fall-2013/labs/messaging-service-grading.html
+++ b/templates/fall-2013/labs/messaging-service-grading.html
@@ -1,4 +1,4 @@
-{% extends "fall-2013/sidebar.html" %}
+{% extends "fall-2013/menu.html" %}
 
 {% macro item(text,score,criteria) -%}
 <div class="box"></div>
@@ -10,60 +10,52 @@
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Messaging Service Grading Sheet</h1>
+<h1>Messaging Service Grading Sheet</h1>
 
-      <p><i>The TA will fill out this sheet when grading your program.</i></p>
+<p><i>The TA will fill out this sheet when grading your program.</i></p>
 
-      <div class="border">
-	Student Name:
-      </div>
-
-      <p><b>TA:</b> <i>Check the boxes below to indicate which tests pass
-	  successfully.  Circle the boxes that do not work correctly and
-	  include a written statement explaining the error that occured.</i></p>
-
-      <h2>Student Client and Server</h2>
-
-      {{ item("Command line parsing",10,"The server starts on the
-	supplied port and can be contacted by clients using the host
-	and port information.") }}
-
-      {{ item("Message Protocol",50,"The client is able to send, list,
-      and read multiple messages for a variety of users.  Multiple
-      clients can access the server, but one at a time.") }}
-
-      {{ item("User Interface",10,"The user interface works as
-      specified.") }}
-
-      <h2>Interoperability</h2>
-
-      {{ item("Message Protocol",5,"Passes the Message Protocol tests
-      in the testing script.") }}
-
-      {{ item("Errors",5,"Passes the Errors test in the testing
-      script.") }}
-
-      {{ item("Large Messages",10,"Passes the Large Message test in the
-      testing script.") }}
-
-      {{ item("Partial Messages",10,"Passes the Partial Messages test in
-      the testing script. The student's code is efficient and does NOT
-      read one byte at a time when calling recv().") }}
-
-      <p></p>
-      <p><b>TA:</b> <i>Fill in the information below when testing is
-	  complete and then turn the sheet in to the professor.</i></p>
-
-      <div class="border">TA Name:</div>
-      <div class="border">Score:</div>
-
-    </div>
-  </div>
+<div class="border">
+  Student Name:
 </div>
 
+<p><b>TA:</b> <i>Check the boxes below to indicate which tests pass
+    successfully.  Circle the boxes that do not work correctly and
+    include a written statement explaining the error that occured.</i></p>
+
+<h2>Student Client and Server</h2>
+
+{{ item("Command line parsing",10,"The server starts on the
+supplied port and can be contacted by clients using the host
+and port information.") }}
+
+{{ item("Message Protocol",50,"The client is able to send, list,
+and read multiple messages for a variety of users.  Multiple
+clients can access the server, but one at a time.") }}
+
+{{ item("User Interface",10,"The user interface works as
+specified.") }}
+
+<h2>Interoperability</h2>
+
+{{ item("Message Protocol",5,"Passes the Message Protocol tests
+in the testing script.") }}
+
+{{ item("Errors",5,"Passes the Errors test in the testing
+script.") }}
+
+{{ item("Large Messages",10,"Passes the Large Message test in the
+testing script.") }}
+
+{{ item("Partial Messages",10,"Passes the Partial Messages test in
+the testing script. The student's code is efficient and does NOT
+read one byte at a time when calling recv().") }}
+
+<p></p>
+<p><b>TA:</b> <i>Fill in the information below when testing is
+    complete and then turn the sheet in to the professor.</i></p>
+
+<div class="border">TA Name:</div>
+<div class="border">Score:</div>
 {% endblock %}
 
 
