--- a/templates/fall-2013/labs/web-server.html
+++ b/templates/fall-2013/labs/web-server.html
@@ -1,11 +1,8 @@
-{% extends "fall-2013/sidebar.html" %}
+{% extends "fall-2013/menu.html" %}
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Lab: Web Server</h1>
+      <h1>Lab: Web Server</h1>
 
       <p>The goals of this assignment are (1) to understand how to
 	create an event-driven server and (2) to use POSIX system
@@ -275,9 +272,5 @@ tar -czvf web-server.tgz web-server
 	given on the command line. The more helpful and clear your debugging
 	information is, the better your chances for getting useful help. You
 	should apply this same standard to how you document your code.</p>
-
-    </div>
-  </div>
-</div>
 
 {% endblock %}
