--- a/templates/fall-2013/schedule.html
+++ b/templates/fall-2013/schedule.html
@@ -1,11 +1,8 @@
-{% extends "fall-2013/sidebar.html" %}
+{% extends "fall-2013/menu.html" %}
 
 {% block page %}
 
-<div class="text">
-  <div class="row-fluid">
-    <div class="span12">
-      <h1 class="top">Schedule</h1>
+<h1>Schedule</h1>
 
       This schedule is <u>subject to change</u>. Assignments may be
       changed up until the day they are assigned.
@@ -39,9 +36,5 @@
       {% endfor %}
 
       {% endfor %}
-
-    </div>
-  </div>
-</div>
       
 {% endblock %}
