--- a/templates/winter-2014/officehours.html
+++ b/templates/winter-2014/officehours.html
@@ -1,4 +1,4 @@
-{% extends "winter-2014/sidebar.html" %}
+{% extends "winter-2014/menu.html" %}
 
 {% block page %}
 
@@ -11,162 +11,162 @@
 
 <!-- Monday -->
 
-<div class="row-fluid office">
-  <div class="span2 day">Monday</div>
-  <div class="span2 hours">
+<div class="row office">
+  <div class="large-2 columns day">Monday</div>
+  <div class="large-2 columns hours">
     12 - 2pm
   </div>
-  <div class="span3 hours">
+  <div class="large-3 columns hours">
     Nozomu
   </div>
-  <div class="span5 hours">
+  <div class="large-5 columns hours">
     2212 TMCB
   </div>
 </div>
 
-<div class="row-fluid">
-  <div class="offset2 span2 hours">
+<div class="row">
+  <div class="large-offset-2 large-2 columns hours">
     4 - 6pm
   </div>
-  <div class="span3 hours">
+  <div class="large-3 columns hours">
     Nozomu
   </div>
-  <div class="span5 hours">
+  <div class="large-5 columns hours">
     2212 TMCB
   </div>
 </div>
 
-<div class="row-fluid">
-  <div class="offset2 span2 hours">
+<div class="row">
+  <div class="large-offset-2 large-2 columns hours">
     4 - 5pm
   </div>
-  <div class="span3 hours">
+  <div class="large-3 columns hours">
     Prof. Zappala
   </div>
-  <div class="span5 hours">
+  <div class="large-5 columns hours">
     2228 TMCB
   </div>
 </div>
 
 <!--- Tuesday -->
 
-<div class="row-fluid office">
-  <div class="span2 day">Tuesday</div>
-  <div class="span2 hours">
+<div class="row office">
+  <div class="large-2 columns day">Tuesday</div>
+  <div class="large-2 columns hours">
     1 - 6pm
   </div>
-  <div class="span3 hours">
+  <div class="large-3 columns hours">
     James
   </div>
-  <div class="span5 hours">
+  <div class="large-5 columns hours">
     1058 TMCB, cubicle 17
   </div>
 </div>
 
 <!-- Wednesday -->
 
-<div class="row-fluid office">
-  <div class="span2 day">Wednesday</div>
-  <div class="span2 hours">
+<div class="row office">
+  <div class="large-2 columns day">Wednesday</div>
+  <div class="large-2 columns hours">
     12 - 2pm
   </div>
-  <div class="span3 hours">
+  <div class="large-3 columns hours">
     Nozomu
   </div>
-  <div class="span5 hours">
+  <div class="large-5 columns hours">
     2212 TMCB
   </div>
 </div>
 
-<div class="row-fluid">
-  <div class="offset2 span2 hours">
+<div class="row">
+  <div class="large-offset-2 large-2 columns hours">
     4 - 6pm
   </div>
-  <div class="span3 hours">
+  <div class="large-3 columns hours">
     Nozomu
   </div>
-  <div class="span5 hours">
+  <div class="large-5 columns hours">
     2212 TMCB
   </div>
 </div>
 
-<div class="row-fluid">
-  <div class="offset2 span2 hours">
+<div class="row">
+  <div class="large-offset-2 large-2 columns hours">
     4 - 5
   </div>
-  <div class="span3 hours">
+  <div class="large-3 columns hours">
     Prof. Zappala
   </div>
-  <div class="span5 hours">
+  <div class="large-5 columns hours">
     2228 TMCB
   </div>
 </div>
 
 <!--- Thursday -->
 
-<div class="row-fluid office">
-  <div class="span2 day">Thursday</div>
-  <div class="span2 hours">
+<div class="row office">
+  <div class="large-2 columns day">Thursday</div>
+  <div class="large-2 columns hours">
     1 - 6pm
   </div>
-  <div class="span3 hours">
+  <div class="large-3 columns hours">
     James
   </div>
-  <div class="span5 hours">
+  <div class="large-5 columns hours">
     1058 TMCB, cubicle 17
   </div>
 </div>
 
 <!-- Friday -->
 
-<div class="row-fluid office">
-  <div class="span2 day">Friday</div>
-  <div class="span2 hours">
+<div class="row office">
+  <div class="large-2 columns day">Friday</div>
+  <div class="large-2 columns hours">
     12 - 2pm
   </div>
-  <div class="span3 hours">
+  <div class="large-3 columns hours">
     Nozomu
   </div>
-  <div class="span5 hours">
+  <div class="large-5 columns hours">
     2212 TMCB
   </div>
 </div>
 
-<div class="row-fluid">
-  <div class="offset2 span2 hours">
+<div class="row">
+  <div class="large-offset-2 large-2 columns hours">
     4 - 6pm
   </div>
-  <div class="span3 hours">
+  <div class="large-3 columns hours">
     Nozomu
   </div>
-  <div class="span5 hours">
+  <div class="large-5 columns hours">
     2212 TMCB
   </div>
 </div>
 
-<div class="row-fluid">
-  <div class="offset2 span2 hours">
+<div class="row">
+  <div class="large-offset-2 large-2 columns hours">
     4 - 5
   </div>
-  <div class="span3 hours">
+  <div class="large-3 columns hours">
     Prof. Zappala
   </div>
-  <div class="span5 hours">
+  <div class="large-5 columns hours">
     2228 TMCB
   </div>
 </div>
 
 <!-- Saturday -->
 
-<div class="row-fluid office">
-  <div class="span2 day">Saturday</div>
-  <div class="span2 hours">
+<div class="row office">
+  <div class="large-2 columns day">Saturday</div>
+  <div class="large-2 columns hours">
     9am - 12pm
   </div>
-  <div class="span3 hours">
+  <div class="large-3 columns hours">
     Nozomu
   </div>
-  <div class="span5 hours">
+  <div class="large-5 columns hours">
     2212 TMCB
   </div>
 </div>
