--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <title>CS 360 Internet Programming</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/static/img/favicon.ico">
+    <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/foundation/5.3.3/css/normalize.css">
@@ -41,8 +42,8 @@
     </div>
     {% endif %}
 
-    <div class="row">
-      <div id="page" class="text">
+    <div id="page" class="text">
+      <div class="row">
 	{% block page %}{% endblock %}
       </div>
     </div>
