Added icon font for external links.

--- a/templates/fall-2014/menu.html
+++ b/templates/fall-2014/menu.html
@@ -41,7 +41,7 @@ Fall 2014
     {{ render('help','instructor','Instructor and TAs') }}
     {{ render('help','officehours','Office Hours') }}
     {{ render('help','code','Sample Code') }}
-    <li><a href="https://groups.google.com/d/forum/byu-cs-360-internet-programming">Discussion</a> <i class="icon-share-alt"></i></li>
+    <li><a href="https://piazza.com/byu/fall2014/cs360" target="_blank">Discussion <i class="fi-arrow-right"></i></a></li>
   </ul>
 </li>
 </ul>
