Working on Make tutorial.

--- a/templates/fall-2014/menu.html
+++ b/templates/fall-2014/menu.html
@@ -28,6 +28,7 @@ Fall 2014
   <a href="#">Tutorials</a>
   <ul class="dropdown">
     {{ render('tutorials','linux-command-line','Linux Command Line') }}
+    {{ render('tutorials','make','Make') }}
   </ul>
 </li>
 <li class="has-dropdown {% if previous == "labs" %}active{% endif %}">
