Fixed formatting of Make tutorial

--- a/templates/fall-2013/menu.html
+++ b/templates/fall-2013/menu.html
@@ -36,7 +36,7 @@ Fall 2013
   </ul>
 </li>
 {{ render('','code','Sample Code') }}
-<li><a href="https://groups.google.com/d/forum/byu-cs-360-internet-programming">Discussion</a> <i class="icon-share-alt"></i></li>
+<li><a href="https://groups.google.com/d/forum/byu-cs-360-internet-programming">Discussion</a> <i class="fi-arrow-right"></i></li>
 </ul>
 
 {% endblock %}
