--- a/static/css/app.css
+++ b/static/css/app.css
@@ -362,11 +362,18 @@ li {
 }
 
 pre {
-    font-size: 0.9em;
+    font-family: monospace;
+    font-size: 1.1em;
     background-color: #f8f8f8;
-    padding: 5px 10px;
+    padding: 10px 10px;
     margin-bottom: 20px;
     border: 1px solid #ddd;
+}
+
+code {
+    border: none;
+    padding: none;
+    background-color: #dedede;
 }
 
 blockquote {
