Fixed office hours. Added some help for the first lab.

--- a/templates/fall-2014/help/officehours.html
+++ b/templates/fall-2014/help/officehours.html
@@ -14,7 +14,7 @@
 <div class="row office">
   <div class="large-2 columns day">Monday</div>
   <div class="large-2 columns hours">
-    10am - 2pm
+    10am - 12pm
   </div>
   <div class="large-3 columns hours">
     Justin
@@ -53,7 +53,7 @@
 <div class="row office">
   <div class="large-2 columns day">Tuesday</div>
   <div class="large-2 columns hours">
-    10am - 2pm
+    10am - 12:50pm
   </div>
   <div class="large-3 columns hours">
     Mark
@@ -65,7 +65,7 @@
 
 <div class="row">
   <div class="large-offset-2 large-2 columns hours">
-    1pm - 3pm
+    2:10pm - 4:20pm
   </div>
   <div class="large-3 columns hours">
     Mark
@@ -80,7 +80,7 @@
 <div class="row office">
   <div class="large-2 columns day">Wednesday</div>
   <div class="large-2 columns hours">
-    10am - 2pm
+    10am - 12pm
   </div>
   <div class="large-3 columns hours">
     Justin
@@ -92,7 +92,7 @@
 
 <div class="row">
   <div class="large-offset-2 large-2 columns hours">
-    1pm - 3pm
+    2:10pm - 4:20pm
   </div>
   <div class="large-3 columns hours">
     Justin
@@ -119,7 +119,7 @@
 <div class="row office">
   <div class="large-2 columns day">Thursday</div>
   <div class="large-2 columns hours">
-    10am - 2pm
+    10am - 12:50pm
   </div>
   <div class="large-3 columns hours">
     Mark
@@ -146,22 +146,10 @@
 <div class="row office">
   <div class="large-2 columns day">Friday</div>
   <div class="large-2 columns hours">
-    10am - 2pm
+    10am - 3pm
   </div>
   <div class="large-3 columns hours">
-    Justin
-  </div>
-  <div class="large-5 columns hours">
-    2240 TMCB
-  </div>
-</div>
-
-<div class="row">
-  <div class="large-offset-2 large-2 columns hours">
-    1pm - 3pm
-  </div>
-  <div class="large-3 columns hours">
-    Justin
+    Mark and Justin
   </div>
   <div class="large-5 columns hours">
     2240 TMCB
