--- a/templates/fall-2014/menu.html
+++ b/templates/fall-2014/menu.html
@@ -29,6 +29,7 @@ Fall 2014
   <ul class="dropdown">
     {{ render('tutorials','linux-command-line','Linux Command Line') }}
     {{ render('tutorials','make','Make') }}
+    {{ render('tutorials','git','Git') }}
   </ul>
 </li>
 <li class="has-dropdown {% if previous == "labs" %}active{% endif %}">
