--- a/templates/winter-2014/labs/web-application.html
+++ b/templates/winter-2014/labs/web-application.html
@@ -31,7 +31,7 @@ principles](http://cs360.byu.edu/static/fall-2014/lectures/web-design.pdf).
 * Supports a REST interface as an API that can be used for third-party
 applications.
 
-* Uses some kind of cutting-edge framework, or a framework you haven’t
+* Uses some kind of cutting-edge framework, or a framework you haven't
 used before. Good choices are:
 
     * Javascript: node.js and Express for the backend, Ember or
@@ -49,7 +49,7 @@ used before. Good choices are:
     and many jobs are available for them.
 
 * Has the code stored in GitHub using the open source license of your
-choice Host the final project on a web site. 
+choice. 
 
 * The final project is hosted on a web site.
 
