Updated the web app.

--- a/templates/fall-2014/labs/queueing-theory.html
+++ b/templates/fall-2014/labs/queueing-theory.html
@@ -29,19 +29,17 @@ or write a Python script to do the calculations.
 1. You are entering the Marriott Center to watch a basketball game.
 There is only one ticket line to purchase tickets.  Each ticket
 purchase takes an average of 18 seconds. The average arrival rate is 3
-persons/minute.
-	  
-1. Find the average length of queue and average waiting time in queue
-assuming M/M/1 queuing.
+persons/minute. Find the average length of queue and average waiting
+time in queue assuming M/M/1 queuing.
 
-    a. You are now in line to get into the arena.  There are 3
-       operating turnstiles with one ticket-taker each.  On average it
-       takes 3 seconds for a ticket-taker to process your ticket and
-       allow entry. The average arrival rate is 40 persons/minute.
+1. You are now in line to get into the arena.  There are 3 operating
+turnstiles with one ticket-taker each.  On average it takes 3 seconds
+for a ticket-taker to process your ticket and allow entry. The average
+arrival rate is 40 persons/minute.
 
-    b. Find the average length of queue, average waiting time in queue
-       assuming M/M/N queuing. What is the probability of having
-       exactly 5 people in the system?
+    Find the average length of queue, average waiting time in queue
+    assuming M/M/N queuing. What is the probability of having exactly
+    5 people in the system?
 	  
 1. You are now inside the arena.  They are passing out Cosmo the
 Cougar bobblehead dolls as a free giveaway.  There is only one person
@@ -49,8 +47,8 @@ passing these out and a line has formed behind her.  It takes her
 exactly 6 seconds to hand out a doll and the arrival rate averages 9
 people/minute.
 
-1. Find the average length of queue, average waiting time in queue,
-and average time spent in the system assuming M/D/1 queuing.
+    Find the average length of queue, average waiting time in queue,
+    and average time spent in the system assuming M/D/1 queuing.
 
 ## 2. Queueing Analysis
 
@@ -242,7 +240,8 @@ further.</p>
 ## Extra Credit
 
 For extra credit, include the same comparision for the
-[nginx](http://wiki.nginx.org/Main) web server.
+[nginx](http://wiki.nginx.org/Main) web server. You may alternatively
+use nginx for Part 2 and then use lighttpd as extra credit.
 
 ## Submission
 
