--- a/templates/fall-2014/labs/web-application.html
+++ b/templates/fall-2014/labs/web-application.html
@@ -12,15 +12,17 @@ database appliction, and (2) gain experience designing a user
 interface for a web application, and (3) learn how to program a web
 application using a modern framework.
 
+## Passion
+
+Work on something you are passionate about. This could be something
+you always wanted to build, something that you think could lead to a
+startup, or something that will help society in some way. For example,
+my passions are family history work and civic hacking. You don’t need
+to share my passions, but should find your own.
+
 ## Requirements
 
 Your application must meet these general requirements:
-
-* Meets a need you have identified or that benefits society in some way. Examples include:
-
-    * family history
-    * open government
-    * a startup or business idea
 
 * Has a back end that stores data in a relational (e.g. MySQL) or
 document database (e.g. MongoDB).
@@ -34,8 +36,8 @@ applications.
 * Uses some kind of cutting-edge framework, or a framework you haven’t
 used before. Good choices are:
 
-    * Javascript: node.js and Express for the backend, Ember or
-    Angular for the front end
+    * Javascript: node.js and Express for the backend, with Angular
+    for the front end
 
     * Python: Flask or DJango (in increasing level of complexity)
 
@@ -45,11 +47,11 @@ used before. Good choices are:
 
     You will be highly productive using Flask since you know some
     Python already. I would also encourage you to try
-    node/Ember/Angular, since these are rapidly becoming very popular
+    node/Angular, since these are rapidly becoming very popular
     and many jobs are available for them.
 
 * Has the code stored in GitHub using the open source license of your
-choice Host the final project on a web site. 
+choice.
 
 * The final project is hosted on a web site.
 
