--- a/templates/winter-2014/labs/queueing-theory.html
+++ b/templates/winter-2014/labs/queueing-theory.html
@@ -253,7 +253,7 @@ python generator.py --port 8000 -l 10 -d 30
 	the experiments and collected data), show your graphs, and discuss
 	what they show. Be sure to refer to the graphs in your report, for
 	example "Figure 1 shows that ..."  Explain how well the experiments
-	match the theoetical results, and discuss any differences you see.
+	match the theoretical results, and discuss any differences you see.
 	Discuss the difference in performance between the two servers.</p>
 
       <h2>4. Conclusion</h2>
